--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#222222" />
     <meta
       name="description"
-      content="Figure Time is a world clock tool to help you navigate multiple time zones."
+      content="About Time is a world clock tool to help you navigate multiple time zones."
     />
-    <title>Figure Time</title>
+    <title>About Time</title>
     <link href="main.css" rel="stylesheet" />
     <script defer src="main.js"></script>
   </head>
