--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/icon48.png" />
+    <link rel="icon" href="../src/assets/icons/icon48.png" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#222222" />
     <meta
@@ -10,8 +10,8 @@
       content="About Time is a world clock tool to help you navigate multiple time zones."
     />
     <title>About Time</title>
-    <link href="main.css" rel="stylesheet" />
-    <script defer src="main.js"></script>
+    <link href="../src/styles/main.css" rel="stylesheet" />
+    <script defer src="../src/js/main.js"></script>
   </head>
   <body style="background-color: #222">
     <noscript>You need to enable JavaScript to run this app.</noscript>
