--- a/public/popup.html
+++ b/public/popup.html
@@ -15,6 +15,6 @@
   </head>
   <body>
     <div>Hello, World!</div>
-    <script src="popup.js"></script>
+    <script src="../src/js/popup.js"></script>
   </body>
 </html>
